--- a/welcome.css
+++ b/welcome.css
@@ -1,5 +1,7 @@
 /* importing font that we need  */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono&family=Tiro+Devanagari+Hindi&display=swap");
 
 * {
   margin: 0;
@@ -7,7 +9,6 @@
 }
 
 body {
-  margin: 20px;
   /* height: 100vh;
   width: 100vw; */
   background-color: #fbf8f1;
@@ -16,11 +17,17 @@ body {
   flex-direction: column;
   /* align-items: center; */
   justify-content: center;
+
+  font-family: "Poppins", sans-serif;
+}
+
+.section {
+  margin: 2rem;
 }
 
 .cssreel {
-  margin-top: 15%;
-  margin-bottom: 15%;
+  margin-top: 25vh;
+  margin-bottom: 35vh;
 }
 
 /* setting the font to the imported font */
@@ -95,12 +102,57 @@ body {
   }
 }
 
-.intro {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  font-family: "Poppins", sans-serif;
+.intro h1 {
+  font-family: "Tiro Devanagari Hindi", serif;
+  font-size: 5rem;
+}
+.intro p {
+  padding: 2rem;
 }
 
-.intro h1 {
-  font-size: bold;
+.languagesDisplay {
+  font-family: "Space Mono", monospace;
+  font-size: 40px;
+  color: grey;
+  display: flex;
+  flex-direction: column;
+  /* padding: 1rem; */
+  align-items: center;
+  justify-content: center;
+}
+
+.languagesDisplay div {
+  padding: 0.5rem 10rem;
+}
+
+.lang_subdisplay {
+  display: flex;
+  flex-direction: row;
+}
+
+.languageDescription {
+  display: flex;
+  flex-direction: column;
+}
+.subheading h3 {
+  font-size: 2rem;
+}
+.alternate {
+  margin-left: auto;
+}
+.subcontent {
+  padding: 0rem 1 rem;
+}
+
+.contactsSection {
+  margin-top: 2 rem;
+  margin-bottom: 2rem;
+  font-family: "Space Mono", monospace;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.contacts {
+  padding: 0rem 1rem;
 }
