--- a/welcome.css
+++ b/welcome.css
@@ -121,13 +121,11 @@ body {
   justify-content: center;
 }
 
-.languagesDisplay div {
-  padding: 0.5rem 10rem;
-}
-
 .lang_subdisplay {
   display: flex;
+  width: 100%;
   flex-direction: row;
+  justify-content: space-around;
 }
 
 .languageDescription {
@@ -137,11 +135,25 @@ body {
 .subheading h3 {
   font-size: 2rem;
 }
-.alternate {
-  margin-left: auto;
+.alternate h3 {
+  display: flex;
+  justify-content: end;
 }
 .subcontent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 0rem 1 rem;
+  justify-content: center;
+  /* width: 50%; */
+  margin: 2rem 25%;
+}
+.subcontent img {
+  display: block;
+  padding: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .contactsSection {
