--- a/modal.css
+++ b/modal.css
@@ -1,8 +1,14 @@
 .show-modal {
-  font-size: 2rem;
+  font-size: 1.25rem;
   font-weight: 600;
-  padding: 1.75rem 3.5rem;
-  margin: 5rem 2rem;
+  padding: 1rem 3rem;
+  margin: 2rem 2rem;
+
+  /* this will center the button */
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
   border: none;
   background-color: #fff;
   color: #444;
